# cookiecutter-test-instance

./: .cookiecutter.json  .cruft.json  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  Dockerfile  README.md  README.rst  environment.yml  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: build_and_test.yml  constraints.txt  new_tests.yml  pre-commit.yml  release.yml  tests.yml
common/: README.md  constants.py  logger_config.py
common/conf_files/: .pylintrc  Dockerfile  environment.yml
cookiecutter-test-instance/: .cookiecutter.json  .cruft.json  .readthedocs.yml  README.rst  noxfile.py  pyproject.toml
cookiecutter-test-instance/.github/workflows/: build_and_test.yml  release.yml  tests.yml
cookiecutter-test-instance/cookiecutter_test_instance/: __main__.py
cookiecutter-test-instance/cookiecutter_test_instance/tests/: test_main.py
cookiecutter-test-instance/docs/: conf.py  index.rst  reference.rst  usage.rst
cookiecutter_test_instance/: errbot_example.py
cookiecutter_test_instance/tests/: test_main.py
cookiecutter_test_instance/utils/: a_util.py
cookiecutter_test_instance/utils/tests/: test_a_util.py  test_example.py
docs/: conf.py  index.rst  reference.rst  usage.rst
docs/references/: README.md  readme.rst
docs/source/: code_reference.rst  conf.py  index.rst  reference.rst  requirements.txt
instance/: main.py
instance/tests/: test_main.py
instance/utils/tests/: test_a_util.py  test_example.py
notebooks/: example_note.ipynb
notebooks/nb_python/: example_note.py
notebooks/notes/: example_note.ipynb
