[tool.poetry]
name = "instance"
version = "0.0.0"
description = "Instance"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
readme = "README.rst"
homepage = "https://github.com/cjolowicz/instance"
repository = "https://github.com/cjolowicz/instance"
documentation = "https://instance.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/cjolowicz/instance/releases"

[tool.poetry.dependencies]
python = "^3.7.1"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^0.15.5"}
sphinx = "^4.1.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.0"
darglint = "^1.8.0"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^0.5.2"
sphinx-click = "^3.0.1"
Pygments = "^2.9.0"

[tool.poetry.scripts]
instance = "instance.main:main"

#[tool.coverage.paths]
#source = ["src", "*/site-packages"]

#[tool.coverage.run]
#branch = true
#source = ["instance"]


[tool.coverage.run]
omit = [
  "setup.py",
  "*/notebooks/*",
  "*/main.py",
  "common/*",
  "module/*",
  "*/__init__.py"]
data_file = ".cache/.coverage"

# need to `pip install pytest pytest-cov converage[toml] pytest-xdist
# from root dir:
# pytest -n 3 --rootdir=. . --cov=.  --cov-fail-under=80


[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
python_files = [
  "test_*.py",
  "example_*.py"
]



[tool.mypy]
python_version = "3.7"
show_error_context = true
show_column_numbers = true
pretty = true
show_error_codes = true

disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_reexport = true
#disallow_subclassing_any = true
#disallow_untyped_calls = true
#disallow_any_unimported = true
#warn_unused_configs = true
# warn_unused_ignores = true  # purposely disabled
#strict_equality = true

#[[tool.mypy.overrides]]  # example of module disable for mypy
#module = "google.oauth2.*"
#ignore_missing_imports = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
